Completed Scraping notebook

--- a/mission_to_mars.ipynb
+++ b/mission_to_mars.ipynb
@@ -28,7 +28,7 @@
     "    # executable_path = {\"executable_path\": \"/usr/local/bin/chromedriver\"}\n",
     "    # return Browser(\"chrome\", **executable_path, headless=False)\n",
     "    # Windows USERS -> Uncommented these 2 lines below, and comment out the top 2 lines\n",
-    "    executable_path = {'executable_path': 'resources/chromedriver.exe'}\n",
+    "    executable_path = {'executable_path': 'resources/v74/chromedriver.exe'}\n",
     "    return Browser(\"chrome\", **executable_path, headless=False)"
    ]
   },
@@ -75,7 +75,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://www.jpl.nasa.gov/spaceimages/images/wallpaper/PIA19674-1920x1200.jpg\n"
+      "https://www.jpl.nasa.gov/spaceimages/images/wallpaper/PIA17563-1920x1200.jpg\n"
      ]
     }
    ],
@@ -102,9 +102,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "InSight sol 151 (2019-04-30) low -97.1ºC (-142.8ºF) high -17.5ºC (0.4ºF)\n",
-      "winds from the W at 4.1 m/s (9.2 mph) gusting to 12.3 m/s (27.5 mph)\n",
-      "pressure at 7.40 hPapic.twitter.com/SQsvKRWwHz\n"
+      "InSight sol 152 (2019-05-01) low -98.1ºC (-144.5ºF) high -17.2ºC (1.0ºF)\n",
+      "winds from the SW at 4.8 m/s (10.7 mph) gusting to 13.2 m/s (29.5 mph)\n",
+      "pressure at 7.40 hPapic.twitter.com/zJGo11uNF1\n"
      ]
     }
    ],
@@ -230,37 +230,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 5 Mars Hemispheres - Use a Python dictionary to store the data using the keys img_url and title\n",
-    "def mars_news_scrape():\n",
-    "    browser = init_browser()\n",
-    "    mars_hemisphere_url = \"https://astrogeology.usgs.gov/search/results?q=hemisphere+enhanced&k1=target&v1=Mars\"\n",
-    "    browser.visit(url)\n",
-    "    time.sleep(1)\n",
+    "# Create an Empty List to hold the dicitionary \n",
+    "hemisphere_list = []\n",
+    "# Call the Function\n",
+    "browser = init_browser()\n",
+    "hemisphere_html = browser.html\n",
+    "hemisphere_url = \"https://astrogeology.usgs.gov/search/results?q=hemisphere+enhanced&k1=target&v1=Mars\"\n",
+    "browser.visit(hemisphere_url)\n",
+    "time.sleep(3)\n",
     "\n",
-    "    # Scrape page into Soup\n",
+    "\n",
+    "html = browser.html\n",
+    "hem_soup_master = bs(html, 'html.parser')\n",
+    "items = hem_soup_master.find_all('div', class_='item')\n",
+    "\n",
+    "for item in items:\n",
+    "    item_url = item.find('h3').text\n",
+    "    try:\n",
+    "        browser.find_link_by_partial_text(item_url)[0].click()\n",
+    "        time.sleep(5)\n",
+    "    except ElementDoesNotExist:\n",
+    "        print(\"Complete\")\n",
+    "        \n",
     "    html = browser.html\n",
-    "    soup = bs(html, \"html.parser\")\n",
-    "\n",
-    "    # 5. Mars hemispeheres\n",
-    "\n",
-    "    # Store data in a dictionary\n",
-    "    hemisphere_image_urls = [\n",
-    "        {\"title\": \"Valles Marineris Hemisphere\", \"img_url\": \"...\"},\n",
-    "        {\"title\": \"Cerberus Hemisphere\", \"img_url\": \"...\"},\n",
-    "        {\"title\": \"Schiaparelli Hemisphere\", \"img_url\": \"...\"},\n",
-    "        {\"title\": \"Syrtis Major Hemisphere\", \"img_url\": \"...\"},\n",
-    "    ]\n",
-    "\n",
-    "\n",
-    "    # Close the browser after scraping\n",
-    "    browser.quit()\n",
-    "\n",
-    "    # Return results\n",
-    "    return hemisphere_image_urls"
+    "    hem_soup_two = bs(html, 'html.parser')\n",
+    "    hemisephere_image = hem_soup_two.find('img', class_='wide-image')['src']\n",
+    "    hemisphere_title = hem_soup_two.find('h2', class_='title').text\n",
+    "    \n",
+    "    hemisphere_dict = {}\n",
+    "    hemisphere_dict[\"img_url\"] = \"https://astrogeology.usgs.gov\" + hemisephere_image\n",
+    "    hemisphere_dict[\"title\"] = hemisphere_title\n",
+    "    hemisphere_list.append(hemisphere_dict)\n",
+    "    \n",
+    "    browser.back()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'img_url': 'https://astrogeology.usgs.gov/cache/images/cfa62af2557222a02478f1fcd781d445_cerberus_enhanced.tif_full.jpg',\n",
+       "  'title': 'Cerberus Hemisphere Enhanced'},\n",
+       " {'img_url': 'https://astrogeology.usgs.gov/cache/images/3cdd1cbf5e0813bba925c9030d13b62e_schiaparelli_enhanced.tif_full.jpg',\n",
+       "  'title': 'Schiaparelli Hemisphere Enhanced'},\n",
+       " {'img_url': 'https://astrogeology.usgs.gov/cache/images/ae209b4e408bb6c3e67b6af38168cf28_syrtis_major_enhanced.tif_full.jpg',\n",
+       "  'title': 'Syrtis Major Hemisphere Enhanced'},\n",
+       " {'img_url': 'https://astrogeology.usgs.gov/cache/images/7cf2da4bf549ed01c17f206327be4db7_valles_marineris_enhanced.tif_full.jpg',\n",
+       "  'title': 'Valles Marineris Hemisphere Enhanced'}]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hemisphere_list"
    ]
   },
   {
