--- a/mission_to_mars.ipynb
+++ b/mission_to_mars.ipynb
@@ -25,11 +25,11 @@
    "source": [
     "def init_browser():\n",
     "    # @NOTE: Replace the path with your actual path to the chromedriver\n",
-    "    # executable_path = {\"executable_path\": \"/usr/local/bin/chromedriver\"}\n",
-    "    # return Browser(\"chrome\", **executable_path, headless=False)\n",
+    "    executable_path = {\"executable_path\": \"/usr/local/bin/chromedriver\"}\n",
+    "    return Browser(\"chrome\", **executable_path, headless=False)\n",
     "    # Windows USERS -> Uncommented these 2 lines below, and comment out the top 2 lines\n",
-    "    executable_path = {'executable_path': 'resources/v74/chromedriver.exe'}\n",
-    "    return Browser(\"chrome\", **executable_path, headless=False)"
+    "    #executable_path = {'executable_path': 'resources/v74/chromedriver.exe'}\n",
+    "    #return Browser(\"chrome\", **executable_path, headless=False)"
    ]
   },
   {
@@ -75,7 +75,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://www.jpl.nasa.gov/spaceimages/images/wallpaper/PIA17563-1920x1200.jpg\n"
+      "https://www.jpl.nasa.gov/spaceimages/images/wallpaper/PIA20063-1920x1200.jpg\n"
      ]
     }
    ],
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +242,7 @@
     "hemisphere_html = browser.html\n",
     "hemisphere_url = \"https://astrogeology.usgs.gov/search/results?q=hemisphere+enhanced&k1=target&v1=Mars\"\n",
     "browser.visit(hemisphere_url)\n",
-    "time.sleep(3)\n",
+    "time.sleep(1)\n",
     "\n",
     "\n",
     "html = browser.html\n",
@@ -253,7 +253,7 @@
     "    item_url = item.find('h3').text\n",
     "    try:\n",
     "        browser.find_link_by_partial_text(item_url)[0].click()\n",
-    "        time.sleep(5)\n",
+    "        time.sleep(3)\n",
     "    except ElementDoesNotExist:\n",
     "        print(\"Complete\")\n",
     "        \n",
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
        "  'title': 'Valles Marineris Hemisphere Enhanced'}]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,10 +299,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "browser.quit()"
+   ]
   },
   {
    "cell_type": "code",
